<resources>
    <string name="app_name">Currency Converter</string>
    <string name="network_error">Cannot connect to server</string>
    <string name="no_internet">No internet connection</string>
    <string name="invalid_input">Invalid input</string>
    <string name="unauthorized">Unauthorized</string>
    <string name="not_allowed">Not allowed</string>
    <string name="not_exist">API not exist</string>
    <string name="currency_converter">Currency Converter</string>
    <string name="amount">Amount</string>
    <string name="result">0</string>
    <string name="convert">Convert</string>
    <string name="exchange_rate">Exchange Rate: </string>

    <string-array name="currency_array">
        <item>USD</item>
        <item>SGD</item>
        <item>CNY</item>
        <item>AUD</item>
    </string-array>
</resources>