<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
             android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font_32sp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/margin_24dp"
        android:text="@string/currency_converter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinnerFromCurrency"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_marginStart="@dimen/margin_16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        android:entries="@array/currency_array"
        />

    <EditText
        android:id="@+id/etAmount"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:hint="@string/amount"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/spinnerFromCurrency"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/spinnerFromCurrency"
        app:layout_constraintTop_toTopOf="@+id/spinnerFromCurrency" />

    <Spinner
        android:id="@+id/spinnerToCurrency"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_72dp"
        android:entries="@array/currency_array"
        app:layout_constraintEnd_toEndOf="@+id/spinnerFromCurrency"
        app:layout_constraintStart_toStartOf="@+id/spinnerFromCurrency"
        app:layout_constraintTop_toBottomOf="@+id/spinnerFromCurrency" />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:textSize="@dimen/font_20sp"
        app:layout_constraintBottom_toBottomOf="@+id/spinnerToCurrency"
        app:layout_constraintEnd_toEndOf="@+id/etAmount"
        app:layout_constraintStart_toStartOf="@+id/etAmount"
        app:layout_constraintTop_toTopOf="@+id/spinnerToCurrency" />

    <Button
        android:id="@+id/btnConvert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_24dp"
        android:text="@string/convert"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerToCurrency" />

    <TextView
        android:id="@+id/tvExchangeRateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exchange_rate"
        android:layout_marginTop="@dimen/margin_24dp"
        android:layout_marginStart="@dimen/margin_16dp"
        android:textColor="@android:color/black"
        android:textSize="@dimen/font_14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnConvert" />

    <TextView
        android:id="@+id/tvExchangeRateValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:layout_marginTop="@dimen/margin_24dp"
        android:layout_marginStart="@dimen/margin_16dp"
        android:textSize="@dimen/font_14sp"
        app:layout_constraintStart_toEndOf="@+id/tvExchangeRateLabel"
        app:layout_constraintTop_toBottomOf="@+id/btnConvert" />

    <FrameLayout
        android:id="@+id/loading_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="5dp"
        android:visibility="gone"
        tools:visibility="visible">

        <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true" />
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>